# TranslatorPDF

./: .gitignore  README.md  pyproject.toml
src/: cli.py  func.py  translator.py
src/cli/: cmd.py  entry.py
