[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "packaging>=24.2",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
    "tqdm>=4.67.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "TranslatePDF"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
translate = "cli.cmd:translate"
